site/src/main/webapp/css/pfs-de.css
html, body {
    height: 100%;
}

.pfs-de {
    color: #333333;
    font-family: "calibri", Garamond, Arial,sans-serif;
    font-size: 13px;
    line-height: 18px;
    background-color: #3f3f3f;
    margin: 0;
    width: 100%;
    height: calc(100% - 30px);
}

.pfs-de .banner,
.pfs-de .subnavigation,
.pfs-de .main,
.pfs-de .page-container {
    width: 1024px;
}


.pfs-de .page-container {
    box-shadow: 0px 6px 6px black;
    display: block;
    margin: 15px auto;
    border-top: solid 1px #333333;
    height: calc(100% - 5px);
}

.pfs-de .banner {
    height: 142px;
    background: url('../images/background-b1.png') no-repeat;
    position: relative;
}

.pfs-de .banner .logo,
.pfs-de .banner .login,
.pfs-de .banner .contact
{
    display: inline-block;
    position: absolute;
}

.pfs-de .banner .logo {
    background: url('../images/pfs-de-ka-logo.png') no-repeat 0px 0px / 441px 137px;
    width: 441px;
    height: 137px;
    top: 0px;
    left: 0px;
}

.pfs-de .banner .login {
    background: url('../images/login-de.png') no-repeat 0px 0px / 67px 31px;
    width: 67px;
    height: 27px;
    top: 110px;
    left: 706px;
}

.pfs-de .banner .contact {
    background: url('../images/contact-de.png') no-repeat 0px 0px / 79px 27px;
    width: 79px;
    height: 27px;
    top: 110px;
    left: 790px;
}

.pfs-de .navigation,
.pfs-de .subnavigation {
    width: 678px;
    padding: 0px 162px 0px 184px;
    display: table;
    border-spacing: 0px;
    table-layout: fixed;
}

.pfs-de .navigation {
    height: 32px;
    padding-top: 7px;
    background: #ded2ca url('../images/navigation-border-top.png') no-repeat 0px 0px / 1024px 7px;
}

.pfs-de .subnavigation {
    height: 26px;
    padding-bottom: 8px;
    background: white url('../images/subnavigation-border-bottom.png') no-repeat bottom;
}

.pfs-de .navigation .item,
.pfs-de .subnavigation .item {
    display: table-cell;
    text-align: center;
}    

.pfs-de .navigation .item {
    background-color: #8e8781;
    padding: 8px;
    font-size: 31px;
    line-height: 32px;
    color: black;
    border-right: white 2px solid;
}

.pfs-de .navigation .item:first-child {
    border-left: white 2px solid;
}

.pfs-de .navigation .active,
.pfs-de .navigation .item:hover {
    background-color: white;
}

.pfs-de .subnavigation .item {
    padding: 4px;
    color: black;
    font-size: 15px;
}

.pfs-de .subnavigation .active,
.pfs-de .subnavigation .item:hover {
    text-decoration: underline;
}

.pfs-de .main {
    height: calc(100% - 142px - 55px - 34px);
    max-height: 580px;
    background: url('../images/background-b2.png') 0px 0px no-repeat, url('../images/background-b3.png') 860px 0px no-repeat;
    box-shadow: inset 0px 4px 4px black;
}

.pfs-de .main .content {
    height: 100%;
    background-color: white;
    margin: 0px 161px 0px 184px;
    box-shadow: 4px 4px 3px black, -4px 4px 3px black;
    overflow: auto;
}

.pfs-de .well-large-noBottomPadding {
    padding: 24px 24px 0px 24px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
}

.pfs-de .well-large {
    padding: 24px 24px 24px 24px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
}

.pfs-de h1 {
    font-size: 32px;
    line-height: 36px;
}

.pfs-de .smallFont {
    font-size: 11px;
    line-height: 16px;
}

.pfs-de .main .content .leftbar,
.pfs-de .main .content .contentarea {
    display: inline-block;
    vertical-align: top;
}

.pfs-de .main .content .leftbar {
    min-height: 585px;
    width: 162px;
    background: url('../images/leftbar-missingborder.png') right top no-repeat, url('../images/leftbar-missingborder.png') right bottom no-repeat, url('../images/leftbar-border.png') right repeat-y;
}

.pfs-de .main .content .contentarea {
    width: 500px;
}

.pfs-de a {
    text-decoration: none;
    color: #0088CC;
}

.pfs-de .blackTitle a {
    text-decoration: none;
    color: #000000;
}

.pfs-de img.centered {
    margin: 0 auto;
    clear: right;
    display: block;
    width:  614px;
}

.pfs-de input[type="button"],
.pfs-de input[type="reset"], 
.pfs-de input[type="submit"] {
    height: auto;
    width: auto;
}

.pfs-de button, 
.pfs-de input[type="button"], 
.pfs-de input[type="reset"], 
.pfs-de input[type="submit"] {
    cursor: pointer;
}

.pfs-de input, 
.pfs-de textarea {
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
    transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
}

.pfs-de input, 
.pfs-de textarea, 
.pfs-de select {
    background-color: #FFFFFF;
    border: 1px solid #CCCCCC;
    border-radius: 3px;
    color: #555555;
    display: inline-block;
    height: 18px;
    padding: 4px;
    width: 210px;
    font-size: 13px;
    line-height: 18px;
}

.pfs-de button, 
.pfs-de input, 
.pfs-de select, 
.pfs-de textarea {
    margin: 0;
    vertical-align: middle;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

.pfs-de input[type="button"] {
    background-color: #941616;
    border-color: white;
    border-radius: 12px;
    border-width: 2px;
    color: white;
    font-weight: bold;
    padding: 3px 14px;
}

.pfs-de .grey {
    color: darkgray;
}

